# learn_rust_embedded

./: .gdbinit  .gitignore  Cargo.toml  README.md  leds.txt  openocd.gdb  updating_firmware.txt
.cargo/: config.toml
src/: main.rs
