[package]
# name = "rust_stm32f3discovery"
name = "led-roulette"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.aux11]
path = "auxiliary"
# enable this if you are going to use an external serial adapter
# features = ["adapter"]

[dependencies.heapless]
default-features = false
version = "0.7.1"
